<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
  <LinearLayout
    android:layout_marginTop="10sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mailingListTitle"
        android:textSize="20sp"
        android:textStyle="bold" />
  </LinearLayout>
  
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15sp">
    <TextView
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailTitle"
        android:textSize="14sp"/>
    <EditText
        android:focusable="false"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/emailAddress"/>
    <requestFocus />
   
</LinearLayout>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15sp">
	<TextView
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text" 
        android:hint="@string/subjectHint"/>
    <requestFocus />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:hint="@string/contentHint"
        android:inputType="textMultiLine"
        android:gravity="top|left" 
        android:lines="5"
        android:maxLines="10" />

    <requestFocus />
</LinearLayout>

  <LinearLayout
    android:layout_marginTop="10sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:gravity="center_horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailButton"
        android:onClick="sendEmail"/>
</LinearLayout>


</LinearLayout>